--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+section{
   min-height: 100vh;
+  padding: 10rem 9% 10rem;
+}
+.home{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 9rem;
+}
+.heading{
+  text-align: center;
+  font-size: 6rem;
+}
+.about{
+  background-color: var(--second-bg-color);
+}
+.skills{
+  background-color: var(--bg-color);
+}
+.achievements{
+  background-color: var(--second-bg-color);
+}
+.achievements h2{
+  margin-bottom: 8rem;
 }
 
-.App-link {
-  color: #61dafb;
+/* scrollbar */
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--main-color);
+}
+::-webkit-scrollbar-track{
+  background-color: var(--bg-color);
+  width: 10px;
+}
+/* education */
+.timeline-section{
+  background-color: var(--bg-color);
+  padding: 100px 15px;
+}
+.timeline-section h2{
+  margin-bottom: 5rem;
+}
+/* projects */
+.projects{
+  background-color: var(--second-bg-color);
+}
+.projects h2{
+  margin-bottom: 8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contact{
+  background-color: var(--bg-color);
 }
