--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,111 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins",sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --bg-color : rgb(15,15,15);
+  --second-bg-color: #161616;
+  --text-color: white;
+  --main-color: #14ff6a;
+}
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+body{
+  background: var(--bg-color);
+  color: var(--text-color);
+}
+
+@media(max-width:1200px){
+  html{
+      font-size: 55%;
+  }
+  .projects-container{
+      padding-bottom: 7rem;
+      grid-template-columns: repeat(1,1fr);
+      margin: 0 5rem;
+  }
+}
+@media(max-width:1000px){
+  header{
+      padding: 2rem 3%;
+  }
+  section{
+      padding: 10rem 3% 2rem;
+  }
+  .achievements{
+      padding-bottom: 7rem;
+  }
+  .footer{
+      padding: 2rem 3%;
+  }
+}
+@media(max-width:995px){
+  #menu-icon{
+      display: block;
+  }
+  .navbar{
+      position: absolute;
+      top: 100%;
+      right: 0;
+      width: 50%;
+      border-left: 3px solid var(--main-color);
+      border-bottom: 3px solid var(--main-color);
+      border-bottom-left-radius: 2em;
+      padding: 1rem 3%;
+      background: rgba(0, 0, 0, 0.9);
+      display: none;
+  }
+  .navbar.active{
+      display: block;
+  }
+  .navbar a{
+      display: block;
+      font-size: 2rem;
+      margin: 3rem 0;
+  }
+  .home{
+      flex-direction: column;
+      margin: 5rem 4rem;
+  }
+  .home-content h3{
+      font-size: 2.6rem;
+  }
+  .home-content h1{
+      font-size: 5rem;
+  }
+  .home-img img{
+      width: 70vw;
+      margin-top: 4rem;
+  }
+  .achievements-box{
+      margin: 0 5rem;
+  }
+  .achievements h2{
+      margin-bottom: 3rem;
+  }
+  .projects h2{
+      margin-bottom: 3rem;
+  }
+  .timeline-items::before{
+      left: 7px;
+  }
+  .timeline-item:nth-child(odd){
+      padding-right: 0;
+      text-align: center;
+  }
+  .timeline-item:nth-child(odd),.timeline-item:nth-child(even){
+      padding-left: 37px;
+  }
+  .timeline-dot{
+      left: 0;
+  }
 }
