--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 90px;
     padding: 3rem 9%;
     background: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(10px);
@@ -12,14 +13,21 @@
     z-index: 100;
 }
 .logo{
-    font-size: 3rem;
+    /* font-size: 3rem;
     color: var(--text-color);
-    font-weight: 100;
+    font-weight: 100; */
+    height: 50px;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    border-radius: 50%;
+}
+.logo img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
 }
 .logo:hover{
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 .navbar a{
     font-size: 1.8rem;
